--- a/experimental_vscode_workspace_v1/sudokuProjekt/.project
+++ b/experimental_vscode_workspace_v1/sudokuProjekt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sudokuProjekt</name>
+	<name>SudokuProjekt</name>
 	<comment></comment>
 	<projects>
 	</projects>
